--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
@@ -18,6 +19,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
-    "dotenv": "^16.4.5"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "install": "^0.13.0",
+    "jwt-simple": "^0.5.6",
+    "npm": "^10.7.0"
   }
 }
