--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "mobx": "^6.12.3",
+    "mobx-persist-store": "^1.1.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
