--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/heebo": "^5.0.22",
     "axios": "^1.6.8",
     "mobx": "^6.12.3",
     "mobx-persist-store": "^1.1.5",
