--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,5 +13,8 @@
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
-   }
+    "paths": {
+      "@shared/*": ["../shared/*"]
+    }
+  }
 }
