--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node src/app.ts",
-    "db-push": "prisma db push"
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "db": "prisma db push",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
