--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     /* Language and Environment */
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "outDir": "dist",                                    /* Specify the output directory for generated files. */
 
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
