added ionic app

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-VITE_BASE_URL=http://localhost:3000
+# VITE_BASE_URL=http://localhost:3000
+VITE_BASE_URL=https://40ccdf5fdc4d724af4b9ab437816f690.loophole.site
