--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --exec ts-node src/app.ts",
     "db": "prisma db push",
     "build": "tsc",
-    "start": "node dist/server/app.js"
+    "start": "node dist/server/src/app.js"
   },
   "author": "",
   "license": "ISC",
