--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,6 +16,7 @@
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
     "paths": {
       "@shared/*": ["../shared/*"]
-    }
+    },
+    "noImplicitAny": false
   }
 }
