--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.13.8",
     "vite-tsconfig-paths": "^4.3.2"
-  }, 
+  },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
