--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,7 +21,8 @@
     "noFallthroughCasesInSwitch": true,
     "paths": {
       "@shared/*": ["../shared/*"]
-    }
+    },
+    "noImplicitAny": false
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
