--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ebay/nice-modal-react": "^1.2.13",
     "@fontsource/heebo": "^5.0.22",
     "axios": "^1.6.8",
     "fuse.js": "^7.0.0",
