--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
+    "swiper": "^11.1.3",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
