--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@ebay/nice-modal-react": "^1.2.13",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/heebo": "^5.0.22",
+    "@mui/material": "^5.15.19",
     "axios": "^1.6.8",
     "fuse.js": "^7.0.0",
     "mobx": "^6.12.3",
@@ -21,6 +24,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
+    "stylis": "^4.3.2",
+    "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^11.1.3",
     "vite-tsconfig-paths": "^4.3.2"
   },
