--- a/client/package.json
+++ b/client/package.json
@@ -41,8 +41,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "sass": "^1.77.2",
-    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
+    "unocss": "^0.60.4",
     "vite": "^5.2.0"
   }
 }
