--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20.12.11",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
@@ -30,6 +31,7 @@
     "express-async-errors": "^3.1.1",
     "install": "^0.13.0",
     "jwt-simple": "^0.5.6",
+    "lodash": "^4.17.21",
     "npm": "^10.7.0"
   }
 }
